Bug 110782 - [drm/i915] Displayport connected screen reports Signal Error after update to 5.1 kernel
Summary: [drm/i915] Displayport connected screen reports Signal Error after update to ...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other Linux (All)
: high critical
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: Triaged, ReadyForDev
Keywords: regression
Depends on:
Blocks:
 
Reported: 2019-05-28 12:08 UTC by Blubberbub
Modified: 2019-08-13 09:15 UTC (History)
3 users (show)

See Also:
i915 platform: KBL
i915 features: display/DP


Attachments
dmesg drm.debug=0xe log on linux 5.1.5.arch1-2 (123.56 KB, text/plain)
2019-05-29 06:58 UTC, Blubberbub
no flags Details
dmesg drm.debug=0xe log on linux-lts 4.19.46-1 (123.43 KB, text/plain)
2019-05-29 06:59 UTC, Blubberbub
no flags Details
bad dmesg log with drm.debug=0x1e log_buf_len=4M on drm-tip at 43905c26d4fd15cba890e62f271befc0eca8de4c (701.21 KB, text/plain)
2019-06-03 11:40 UTC, Blubberbub
no flags Details
bad dmesg log with drm.debug=0x1e log_buf_len=4M on drm-tip at f384132bcdd8670478b99a2a71753e1595305dce (751.11 KB, text/plain)
2019-06-07 08:18 UTC, Blubberbub
no flags Details
xrandr --verbose on good kernel linux-lts 4.19.47-1 (16.04 KB, text/plain)
2019-06-07 08:20 UTC, Blubberbub
no flags Details
xrandr --verbose on bad drm-tip f384132bcdd8670478b99a2a71753e1595305dce (problems occur with DP2-3) (17.02 KB, text/plain)
2019-06-07 08:21 UTC, Blubberbub
no flags Details
[PATCH] mst m/n debugs (1.92 KB, patch)
2019-06-10 15:35 UTC, Ville Syrjala
no flags Details | Splinter Review
bad dmesg drm.debug=0xe log_buf_len=4M on drm-tip f384132bcdd867 with "[PATCH] mst m/n debugs" (213.02 KB, text/plain)
2019-06-11 06:58 UTC, Blubberbub
no flags Details
[PATCH] drm/i915: Don't clobber M/N values during fastset check (3.20 KB, patch)
2019-06-11 15:18 UTC, Ville Syrjala
no flags Details | Splinter Review

Description Blubberbub 2019-05-28 12:08:44 UTC
I'm on Arch Linux and when the Linux kernel was updated from v5.0.13-arch1 to v5.1.2-arch1 my secondary screen started to report a "Signal Error". (So no image on the screen at all. Just a little box from the screen itself)
The screen is connected through a thunderbolt docking station, but it was working fine before the update (and during git bisect) so i assume this is a regression.

Switching to the -lts kernel line fixed the issue as well, but that's not a permanent solution, i guess.

-- system architecture: x86_64
-- kernel version: v5.1.2-arch1 
-- Linux distribution: Arch Linux
-- Machine or mother board model: lenovo Thinkpad T480s with a "ThinkPad Pro Docking Station"
-- Display connector: DP

I did a few steps of git bisect which leads me to believe the problem appeared in the drm/i915 module:

$ git bisect log
git bisect start
# good: [6ee2c3f93d50b2a9aa7bee32bf16b924f2d98596] Arch Linux kernel v5.0.13-arch1
git bisect good 6ee2c3f93d50b2a9aa7bee32bf16b924f2d98596
# bad: [8ec0a2cba38f896ebae3c05518c1fc9463db6c0c] Arch Linux kernel v5.1.2-arch1
git bisect bad 8ec0a2cba38f896ebae3c05518c1fc9463db6c0c
# good: [1c163f4c7b3f621efff9b28a47abb36f7378d783] Linux 5.0
git bisect good 1c163f4c7b3f621efff9b28a47abb36f7378d783
# good: [b5dd0c658c31b469ccff1b637e5124851e7a4a1c] Merge branch 'akpm' (patches from Andrew)
git bisect good b5dd0c658c31b469ccff1b637e5124851e7a4a1c
# bad: [cf0240a755b8b3df51b0b857b03309a666611d58] Merge tag 'pinctrl-v5.1-1' of git://git.kernel.org/pub/scm/linux/kernel/git/linusw/linux-pinctrl
git bisect bad cf0240a755b8b3df51b0b857b03309a666611d58
# bad: [80201fe175cbf7f3e372f53eba0a881a702ad926] Merge tag 'for-5.1/block-20190302' of git://git.kernel.dk/linux-block
git bisect bad 80201fe175cbf7f3e372f53eba0a881a702ad926
# bad: [5ea3998d56346975c2701df18fb5b6e3ab5c8d9e] Merge tag 'drm-intel-next-2019-02-07' of git://anongit.freedesktop.org/drm/drm-intel into drm-next
git bisect bad 5ea3998d56346975c2701df18fb5b6e3ab5c8d9e
# bad: [968bf969b47df2481022b9a05eaab02948eec088] drm/i915: Fix skl srckey mask bits
git bisect bad 968bf969b47df2481022b9a05eaab02948eec088
# good: [25f9cebd7a52ddf15405d74fb5fd4c374f301983] drm/i915: Show all active engines on hangcheck
git bisect good 25f9cebd7a52ddf15405d74fb5fd4c374f301983
# good: [f42fb2317ffcbd005eeb22b1e49020821a11e23a] Merge drm/drm-next into drm-intel-next-queued
git bisect good f42fb2317ffcbd005eeb22b1e49020821a11e23a

$ lspci -vnn | grep VGA -A 10 
00:02.0 VGA compatible controller [0300]: Intel Corporation UHD Graphics 620 [8086:5917] (rev 07) (prog-if 00 [VGA controller])
	Subsystem: Lenovo UHD Graphics 620 [17aa:2258]
	Flags: bus master, fast devsel, latency 0, IRQ 157
	Memory at f1000000 (64-bit, non-prefetchable) [size=16M]
	Memory at e0000000 (64-bit, prefetchable) [size=256M]
	I/O ports at e000 [size=64]
	[virtual] Expansion ROM at 000c0000 [disabled] [size=128K]
	Capabilities: <access denied>
	Kernel driver in use: i915
	Kernel modules: i915
Comment 1 Ville Syrjala 2019-05-28 14:19:50 UTC
Please boot with both good and bad kernels and pass drm.debug=0xe to the kernel cmdline. Attach the resulting dmesg from each kernel.
Comment 2 Blubberbub 2019-05-29 06:58:35 UTC
Created attachment 144368 [details]
dmesg drm.debug=0xe log on linux 5.1.5.arch1-2
Comment 3 Blubberbub 2019-05-29 06:59:24 UTC
Created attachment 144369 [details]
dmesg drm.debug=0xe log on linux-lts 4.19.46-1
Comment 4 Blubberbub 2019-05-29 07:06:47 UTC
attachment 144368 [details] is the log from the bad kernel linux 5.1.5.arch1-2
attachment 144369 [details] is the log from the good kernel linux-lts 4.19.46-1

I hope these contain the information you need.
Comment 5 Lakshmi 2019-05-29 07:24:07 UTC
Also, can you please try to reproduce the issue using drm-tip (https://cgit.freedesktop.org/drm-tip)?
Comment 6 Blubberbub 2019-05-29 09:59:42 UTC
I can reproduce the problem with the drm-tip branch as well. (Added the repository as a remote and did a checkout on drm-tip and then used the PKGBUILD and `makepkg -e` to build and install the kernel like previously)

At time of testing drm-tip was at 43905c26d4fd15cba890e62f271befc0eca8de4c.
Comment 7 Lakshmi 2019-05-31 05:42:50 UTC
(In reply to Blubberbub from comment #6)
 
> At time of testing drm-tip was at 43905c26d4fd15cba890e62f271befc0eca8de4c.
From this testing, can you please attach the dmesg from boot with kernel parameters drm.debug=0x1e log_buf_len=4M?
Comment 8 Blubberbub 2019-06-03 11:40:10 UTC
Created attachment 144424 [details]
bad dmesg log with drm.debug=0x1e log_buf_len=4M on drm-tip at 43905c26d4fd15cba890e62f271befc0eca8de4c
Comment 9 Blubberbub 2019-06-07 08:18:13 UTC
Created attachment 144473 [details]
bad dmesg log with drm.debug=0x1e log_buf_len=4M on drm-tip at f384132bcdd8670478b99a2a71753e1595305dce
Comment 10 Blubberbub 2019-06-07 08:20:51 UTC
Created attachment 144474 [details]
xrandr --verbose on good kernel linux-lts 4.19.47-1
Comment 11 Blubberbub 2019-06-07 08:21:43 UTC
Created attachment 144475 [details]
xrandr --verbose on bad drm-tip f384132bcdd8670478b99a2a71753e1595305dce (problems occur with DP2-3)
Comment 12 Blubberbub 2019-06-07 08:51:48 UTC
I attached the requested dmesg log for drm-tip at 43905c26d4fd15cba890e62f271befc0eca8de4c: attachment 144424 [details]

I did another test with the current drm-tip at f384132bcdd8670478b99a2a71753e1595305dce and the problem also appears with that version. (dmesg log in attachment 144473 [details])

I also added the `xrandr --verbose` output of a good and a bad version as attachments attachment 144474 [details] (good) and attachment 144475 [details] (bad). There are some differences, but to me it looks like xrandr doesn't see any problems with the screen "DP2-3", which is an "EIZO FlexScan EV2436W".

I did another step of git bisect:

> $ git bisect log                                                   
> git bisect start
> # good: [6ee2c3f93d50b2a9aa7bee32bf16b924f2d98596] Arch Linux kernel v5.0.13-arch1
> git bisect good 6ee2c3f93d50b2a9aa7bee32bf16b924f2d98596
> # bad: [8ec0a2cba38f896ebae3c05518c1fc9463db6c0c] Arch Linux kernel v5.1.2-arch1
> git bisect bad 8ec0a2cba38f896ebae3c05518c1fc9463db6c0c
> # good: [1c163f4c7b3f621efff9b28a47abb36f7378d783] Linux 5.0
> git bisect good 1c163f4c7b3f621efff9b28a47abb36f7378d783
> # good: [b5dd0c658c31b469ccff1b637e5124851e7a4a1c] Merge branch 'akpm' (patches from Andrew)
> git bisect good b5dd0c658c31b469ccff1b637e5124851e7a4a1c
> # bad: [cf0240a755b8b3df51b0b857b03309a666611d58] Merge tag 'pinctrl-v5.1-1' of git://git.kernel.org/pub/scm/linux/kern
> git bisect bad cf0240a755b8b3df51b0b857b03309a666611d58
> # bad: [80201fe175cbf7f3e372f53eba0a881a702ad926] Merge tag 'for-5.1/block-20190302' of git://git.kernel.dk/linux-block
> git bisect bad 80201fe175cbf7f3e372f53eba0a881a702ad926
> # bad: [5ea3998d56346975c2701df18fb5b6e3ab5c8d9e] Merge tag 'drm-intel-next-2019-02-07' of git://anongit.freedesktop.or
> git bisect bad 5ea3998d56346975c2701df18fb5b6e3ab5c8d9e
> # bad: [968bf969b47df2481022b9a05eaab02948eec088] drm/i915: Fix skl srckey mask bits
> git bisect bad 968bf969b47df2481022b9a05eaab02948eec088
> # good: [25f9cebd7a52ddf15405d74fb5fd4c374f301983] drm/i915: Show all active engines on hangcheck
> git bisect good 25f9cebd7a52ddf15405d74fb5fd4c374f301983
> # good: [f42fb2317ffcbd005eeb22b1e49020821a11e23a] Merge drm/drm-next into drm-intel-next-queued
> git bisect good f42fb2317ffcbd005eeb22b1e49020821a11e23a
> # bad: [85baa5dbf79163026dcb78f742294c522e176432] drm/i915: Update DRIVER_DATE to 20190124
> git bisect bad 85baa5dbf79163026dcb78f742294c522e176432

which means the error was probably introduced between 
f42fb2317ffcbd005eeb22b1e49020821a11e23a and 85baa5dbf79163026dcb78f742294c522e176432:

https://cgit.freedesktop.org/drm-tip/log/?qt=range&q=f42fb2317ffcbd005eeb22b1e49020821a11e23a..85baa5dbf79163026dcb78f742294c522e176432+ (I don't see any mentions of DP there, though)

I'm not feeling very comfortable doing more bisect steps, because i don't know if these commits are considered "safe to run on real hardware" and i really don't want to brick my device running a very experimental hardware driver when I already know that there is at least one bug in it.

What other information can i give you?
Comment 13 Lakshmi 2019-06-10 05:54:25 UTC
@Ville, Any suggestion here?
Comment 14 Ville Syrjala 2019-06-10 15:05:58 UTC
This is another case where something totally crazy is going on with the M/N values:

[    6.179040] [drm:intel_dump_pipe_config [i915]] dp m_n: lanes: 4; gmch_m: 1703936, gmch_n: 8388608, link_m: 283989, link_n: 1048576, tu: 14
[    6.179501] [drm:intel_dump_pipe_config [i915]] adjusted mode:
[    6.179549] [drm:drm_mode_debug_printmodeline [drm]] Modeline "": 60 154000 1920 1968 2000 2080 1200 1203 1209 1235 0x0 0x9
[    6.179654] [drm:intel_dump_pipe_config [i915]] crtc timings: 154000 1920 1968 2000 2080 1200 1203 1209 1235, type: 0x0 flags: 0x9
[    6.179755] [drm:intel_dump_pipe_config [i915]] port clock: 540000, pipe src size: 1920x1200, pixel rate 154000

Based on all those other parameters the m/n values should be like they are in the good log:
dmesg_good_lts_4.19.46-1.txt:[    7.986521] [drm:intel_dump_pipe_config [i915]] dp m_n: lanes: 4; gmch_m: 1794230, gmch_n: 8388608, link_m: 299038, link_n: 1048576, tu: 14

but the values used in the bad log are the values for the previous 1680x1050 modeset. So far I can't see any way that could happen unless we somehow skipped the encoder .compute_config() entirely.
Comment 15 Ville Syrjala 2019-06-10 15:35:03 UTC
Created attachment 144494 [details] [review]
[PATCH] mst m/n debugs

Let's see if we can't extort a bit more information from the driver. Please test this patch with drm.debug=0xe log_buf_len=4M and attach the resulting dmesg.
Comment 16 Blubberbub 2019-06-11 06:58:13 UTC
Created attachment 144499 [details]
bad dmesg drm.debug=0xe log_buf_len=4M on drm-tip f384132bcdd867 with "[PATCH] mst m/n debugs"

I patched the attachment 144494 [details] [review] on top of the bad drm-tip f384132bcdd8670478b99a2a71753e1595305dce (resulting in 6c16031c189b5fcb9eaf0ee5ac6a9e72a8d0cda7) and created a dmesg log with "drm.debug=0xe log_buf_len=4M".

Do you also need the dmesg for a good kernel that is patched with that patch?
Comment 17 Ville Syrjala 2019-06-11 12:48:00 UTC
(In reply to Blubberbub from comment #16)
> Created attachment 144499 [details]
> bad dmesg drm.debug=0xe log_buf_len=4M on drm-tip f384132bcdd867 with
> "[PATCH] mst m/n debugs"
> 
> I patched the attachment 144494 [details] [review] [review] on top of the bad drm-tip
> f384132bcdd8670478b99a2a71753e1595305dce (resulting in
> 6c16031c189b5fcb9eaf0ee5ac6a9e72a8d0cda7) and created a dmesg log with
> "drm.debug=0xe log_buf_len=4M".
> 
> Do you also need the dmesg for a good kernel that is patched with that patch?

No, I don't think that would provide us anything we don't already know.

In this case we get:
[    6.158894] [drm:intel_dp_mst_compute_config [i915]] bpp 24, lanes 4, dotclock 154000, port clock 540000
[    6.158951] [drm:intel_dp_mst_compute_config [i915]] gmch m 1794230, gmch n 8388608, link m 299038, link n 1048576
...
[    6.160712] [drm:intel_dump_pipe_config [i915]] dp m_n: lanes: 4; gmch_m: 1703936, gmch_n: 8388608, link_m: 283989, link_n: 1048576, tu: 14

The m numbers do not match, which should be impossible.
Comment 18 Ville Syrjala 2019-06-11 15:18:07 UTC
Created attachment 144504 [details] [review]
[PATCH] drm/i915: Don't clobber M/N values during fastset check

This one I hope will fix the problem. Please test.
Comment 19 Blubberbub 2019-06-12 09:05:29 UTC
(In reply to Ville Syrjala from comment #18)
> Created attachment 144504 [details] [review] [review]
> [PATCH] drm/i915: Don't clobber M/N values during fastset check
> 
> This one I hope will fix the problem. Please test.

This patch did indeed fix the problem! I didn't do a long-term test, but the screen worked fine for a few minutes and did not report a Signal error anymore.

Thanks for figuring this out!
Comment 20 Ville Syrjala 2019-06-18 15:33:00 UTC
Fix is in:

commit f0521558a2a89d58a08745e225025d338572e60a
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Wed Jun 12 20:24:23 2019 +0300

    drm/i915: Don't clobber M/N values during fastset check


Thanks for reporting the bug and testing the fix.
Comment 21 Marc J 2019-08-13 09:13:30 UTC
On a HP Zbook 17 with Fedora 29, I intend to use Intel HD Graphics 630 + Wayland + external screen for displaying. 

I apologise if I do not submit this bug correctly on the right place. I am not sure what is the right place.


The symptomes are:
At boot everything work correctly: Internal and external display are working.

I also intend to use CUDA on my NVIDIA GPU. As soon as I execute "nvidia-smi" utility, my external displays stop working. The internal display continue to work correctly. Both display are on display ports on a HP thunderbold docking station but I also tried the HDMI port on the laptop and the result is the same.  

DMESG Logs show the following:


The 2 last lines appear when executing nvidia-smi, when the external displays stop working.

I tried several versions of NVIDIA utilities

These are the installed PCI graphic card:
$ lspci -vnn | grep VGA -A 10
00:02.0 VGA compatible controller [0300]: Intel Corporation HD Graphics 630 [8086:591b] (rev 04) (prog-if 00 [VGA controller])
	DeviceName: Onboard IGD
	Subsystem: Hewlett-Packard Company Device [103c:8270]
	Flags: bus master, fast devsel, latency 0, IRQ 153
	Memory at 1ffa000000 (64-bit, non-prefetchable) [size=16M]
	Memory at a0000000 (64-bit, prefetchable) [size=256M]
	I/O ports at 6000 [size=64]
	[virtual] Expansion ROM at 000c0000 [disabled] [size=128K]
	Capabilities: <access denied>
	Kernel driver in use: i915
	Kernel modules: i915
--
01:00.0 VGA compatible controller [0300]: NVIDIA Corporation GM107GLM [Quadro M1200 Mobile] [10de:13b6] (rev a2) (prog-if 00 [VGA controller])
	Subsystem: Hewlett-Packard Company Device [103c:8270]
	Flags: bus master, fast devsel, latency 0, IRQ 16
	Memory at df000000 (32-bit, non-prefetchable) [size=16M]
	Memory at 80000000 (64-bit, prefetchable) [size=256M]
	Memory at 90000000 (64-bit, prefetchable) [size=32M]
	I/O ports at 5000 [size=128]
	[virtual] Expansion ROM at e0000000 [disabled] [size=512K]
	Capabilities: <access denied>
	Kernel driver in use: nvidia
	Kernel modules: nouveau, nvidia

lsmod returns this:
$ lsmod 
Module                  Size  Used by
rfcomm                 90112  4
fuse                  135168  3
xt_MASQUERADE          20480  3
xt_CHECKSUM            16384  2
tun                    57344  2
bridge                208896  0
stp                    16384  1 bridge
llc                    16384  2 bridge,stp
nf_conntrack_netbios_ns    16384  1
nf_conntrack_broadcast    16384  1 nf_conntrack_netbios_ns
xt_CT                  16384  1
ip6t_rpfilter          16384  1
ip6t_REJECT            16384  2
nf_reject_ipv6         20480  1 ip6t_REJECT
ipt_REJECT             16384  6
nf_reject_ipv4         16384  1 ipt_REJECT
xt_conntrack           16384  20
ebtable_nat            16384  1
ip6table_nat           16384  1
ip6table_mangle        16384  1
ip6table_raw           16384  1
ip6table_security      16384  1
iptable_nat            16384  1
nf_nat                 49152  3 ip6table_nat,iptable_nat,xt_MASQUERADE
iptable_mangle         16384  1
iptable_raw            16384  1
iptable_security       16384  1
nf_conntrack          159744  6 xt_conntrack,nf_nat,nf_conntrack_netbios_ns,nf_conntrack_broadcast,xt_CT,xt_MASQUERADE
nf_defrag_ipv6         24576  1 nf_conntrack
nf_defrag_ipv4         16384  1 nf_conntrack
libcrc32c              16384  2 nf_conntrack,nf_nat
ip_set                 57344  0
nfnetlink              16384  1 ip_set
ebtable_filter         16384  1
cdc_mbim               20480  0
ebtables               40960  2 ebtable_nat,ebtable_filter
cdc_ncm                40960  1 cdc_mbim
ip6table_filter        16384  1
ip6_tables             32768  7 ip6table_filter,ip6table_raw,ip6table_nat,ip6table_mangle,ip6table_security
iptable_filter         16384  1
ip_tables              32768  5 iptable_filter,iptable_security,iptable_raw,iptable_nat,iptable_mangle
cmac                   16384  1
bnep                   28672  2
sunrpc                454656  1
vfat                   20480  1
fat                    86016  1 vfat
snd_usb_audio         274432  3
btusb                  57344  0
btrtl                  20480  1 btusb
btbcm                  16384  1 btusb
snd_usbmidi_lib        40960  1 snd_usb_audio
btintel                28672  1 btusb
snd_rawmidi            45056  1 snd_usbmidi_lib
uvcvideo              114688  0
bluetooth             626688  31 btrtl,btintel,btbcm,bnep,btusb,rfcomm
videobuf2_vmalloc      20480  1 uvcvideo
videobuf2_memops       20480  1 videobuf2_vmalloc
videobuf2_v4l2         28672  1 uvcvideo
cdc_ether              24576  0
videobuf2_common       57344  2 videobuf2_v4l2,uvcvideo
videodev              237568  3 videobuf2_v4l2,uvcvideo,videobuf2_common
media                  61440  5 videodev,snd_usb_audio,videobuf2_v4l2,uvcvideo,videobuf2_common
ecdh_generic           16384  2 bluetooth
ecc                    32768  1 ecdh_generic
nvidia              18870272  0
arc4                   16384  2
intel_rapl             28672  0
x86_pkg_temp_thermal    20480  0
intel_powerclamp       20480  0
mei_hdcp               24576  0
mei_wdt                16384  0
coretemp               20480  0
kvm_intel             299008  0
iwlmvm                462848  0
kvm                   753664  1 kvm_intel
mac80211              974848  1 iwlmvm
snd_hda_codec_conexant    20480  1
snd_hda_codec_generic    90112  1 snd_hda_codec_conexant
ledtrig_audio          16384  2 snd_hda_codec_generic,snd_hda_codec_conexant
iTCO_wdt               16384  0
iTCO_vendor_support    16384  1 iTCO_wdt
snd_hda_intel          49152  6
snd_hda_codec         159744  3 snd_hda_codec_generic,snd_hda_codec_conexant,snd_hda_intel
crct10dif_pclmul       16384  1
crc32_pclmul           16384  0
snd_hda_core          102400  4 snd_hda_codec_generic,snd_hda_codec_conexant,snd_hda_intel,snd_hda_codec
iwlwifi               315392  1 iwlmvm
snd_hwdep              16384  2 snd_usb_audio,snd_hda_codec
ghash_clmulni_intel    16384  0
intel_cstate           16384  0
snd_seq                86016  0
snd_seq_device         16384  2 snd_seq,snd_rawmidi
intel_uncore          139264  0
joydev                 28672  0
snd_pcm               114688  5 snd_hda_intel,snd_usb_audio,snd_hda_codec,snd_hda_core
intel_rapl_perf        16384  0
hp_wmi                 16384  0
cfg80211              831488  3 iwlmvm,iwlwifi,mac80211
sparse_keymap          16384  1 hp_wmi
intel_wmi_thunderbolt    20480  0
wmi_bmof               16384  0
snd_timer              40960  2 snd_seq,snd_pcm
rtsx_pci_ms            24576  0
thunderbolt           196608  0
snd                    94208  29 snd_hda_codec_generic,snd_seq,snd_hda_codec_conexant,snd_seq_device,snd_hwdep,snd_hda_intel,snd_usb_audio,snd_usbmidi_lib,snd_hda_codec,snd_timer,snd_pcm,snd_rawmidi
memstick               20480  1 rtsx_pci_ms
rfkill                 28672  8 hp_wmi,bluetooth,cfg80211
soundcore              16384  1 snd
i2c_i801               32768  0
mei_me                 45056  2
ipmi_devintf           20480  0
ipmi_msghandler        73728  2 ipmi_devintf,nvidia
mei                   126976  5 mei_wdt,mei_hdcp,mei_me
intel_pch_thermal      16384  0
hp_accel               28672  0
pcc_cpufreq            20480  0
lis3lv02d              28672  1 hp_accel
input_polldev          20480  1 lis3lv02d
hp_wireless            16384  0
acpi_pad               40960  0
i915                 2248704  16
rtsx_pci_sdmmc         32768  0
mmc_core              180224  1 rtsx_pci_sdmmc
i2c_algo_bit           16384  1 i915
drm_kms_helper        225280  1 i915
mxm_wmi                16384  0
e1000e                286720  0
drm                   495616  9 drm_kms_helper,i915
crc32c_intel           24576  10
tg3                   188416  0
nvme                   49152  3
serio_raw              20480  0
rtsx_pci               81920  2 rtsx_pci_sdmmc,rtsx_pci_ms
nvme_core              98304  5 nvme
wmi                    36864  4 hp_wmi,intel_wmi_thunderbolt,wmi_bmof,mxm_wmi
video                  49152  1 i915
qmi_wwan               40960  0
cdc_wdm                28672  3 cdc_mbim,qmi_wwan
usbnet                 49152  4 cdc_mbim,cdc_ncm,qmi_wwan,cdc_ether
mii                    16384  1 usbnet
vfio_pci               61440  0
irqbypass              16384  2 vfio_pci,kvm
vfio_virqfd            16384  1 vfio_pci
vfio_iommu_type1       32768  0
vfio                   36864  2 vfio_iommu_type1,vfio_pci
Comment 22 Marc J 2019-08-13 09:15:04 UTC
Sorry... I though I was creating a new bug report....


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.